- Created a base fetching vc as well as the tableviewcells

--- a/Jeewood/Base.lproj/Main.storyboard
+++ b/Jeewood/Base.lproj/Main.storyboard
@@ -1,10 +1,45 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="10117" systemVersion="15F34" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="10116" systemVersion="15E65" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10085"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
     <scenes>
+        <!--Base Fetching View Controller-->
+        <scene sceneID="nyw-vT-jsn">
+            <objects>
+                <viewController id="ebj-fc-AON" customClass="BaseFetchingViewController" customModule="Jeewood" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="UCC-6D-ArE"/>
+                        <viewControllerLayoutGuide type="bottom" id="Tu6-L4-3An"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="boU-hc-fbu">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="QMp-EA-DmU">
+                                <rect key="frame" x="0.0" y="64" width="600" height="536"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                            </tableView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="QMp-EA-DmU" firstAttribute="top" secondItem="UCC-6D-ArE" secondAttribute="bottom" id="qeV-BS-b4R"/>
+                            <constraint firstItem="QMp-EA-DmU" firstAttribute="bottom" secondItem="Tu6-L4-3An" secondAttribute="top" id="rG0-6t-eYk"/>
+                            <constraint firstAttribute="trailing" secondItem="QMp-EA-DmU" secondAttribute="trailing" id="rmL-EO-Zwd"/>
+                            <constraint firstItem="QMp-EA-DmU" firstAttribute="leading" secondItem="boU-hc-fbu" secondAttribute="leading" id="sUc-N4-KCW"/>
+                        </constraints>
+                    </view>
+                    <navigationItem key="navigationItem" id="3gI-vy-2TF"/>
+                    <connections>
+                        <outlet property="tableOne" destination="QMp-EA-DmU" id="ZQ5-yi-ILZ"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="ovj-gm-xff" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1081" y="-263"/>
+        </scene>
         <!--View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
@@ -22,5 +57,78 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
         </scene>
+        <!--View Controller-->
+        <scene sceneID="3Be-Xn-uUz">
+            <objects>
+                <viewController id="eqC-gP-21q" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="f0R-6a-mT6"/>
+                        <viewControllerLayoutGuide type="bottom" id="Qj7-2H-JpF"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="g8t-Qz-Yfm">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="jeewood_intro" translatesAutoresizingMaskIntoConstraints="NO" id="RMy-mh-s2Z">
+                                <rect key="frame" x="-6" y="-6" width="612" height="616"/>
+                            </imageView>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="jw_icon" translatesAutoresizingMaskIntoConstraints="NO" id="bYk-Ia-IoI">
+                                <rect key="frame" x="183" y="20" width="235" height="97"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="97" id="1GT-eO-odP"/>
+                                    <constraint firstAttribute="width" constant="235" id="CrV-nB-WhD"/>
+                                </constraints>
+                            </imageView>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="kgG-iw-OQm">
+                                <rect key="frame" x="199" y="508" width="203" height="37"/>
+                                <color key="backgroundColor" red="0.0" green="0.47843137250000001" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="203" id="DO9-lI-CMv"/>
+                                    <constraint firstAttribute="height" constant="37" id="Gc7-zj-yXU"/>
+                                </constraints>
+                                <state key="normal" title="Log into Facebook">
+                                    <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                </state>
+                            </button>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="Qj7-2H-JpF" firstAttribute="top" secondItem="kgG-iw-OQm" secondAttribute="bottom" constant="55" id="O8m-cK-IH0"/>
+                            <constraint firstItem="RMy-mh-s2Z" firstAttribute="leading" secondItem="g8t-Qz-Yfm" secondAttribute="leadingMargin" constant="-26" id="UTC-Pl-NIE"/>
+                            <constraint firstItem="RMy-mh-s2Z" firstAttribute="top" secondItem="g8t-Qz-Yfm" secondAttribute="topMargin" constant="-6" id="ZMZ-Zf-xIM"/>
+                            <constraint firstItem="bYk-Ia-IoI" firstAttribute="centerX" secondItem="kgG-iw-OQm" secondAttribute="centerX" id="cPK-67-s3u"/>
+                            <constraint firstItem="bYk-Ia-IoI" firstAttribute="centerX" secondItem="RMy-mh-s2Z" secondAttribute="centerX" id="n2O-H8-ybQ"/>
+                            <constraint firstItem="RMy-mh-s2Z" firstAttribute="centerX" secondItem="g8t-Qz-Yfm" secondAttribute="centerX" id="neJ-to-whF"/>
+                            <constraint firstAttribute="bottomMargin" secondItem="RMy-mh-s2Z" secondAttribute="bottom" constant="-10" id="u6K-oF-x6e"/>
+                            <constraint firstItem="bYk-Ia-IoI" firstAttribute="top" secondItem="f0R-6a-mT6" secondAttribute="bottom" id="xby-l8-GMa"/>
+                        </constraints>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="r1e-s1-G41" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1818" y="236"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="IVB-SA-I70">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="B9P-oj-7ko" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="xFH-JU-I46">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="ebj-fc-AON" kind="relationship" relationship="rootViewController" id="Jxk-dr-JeI"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="jg2-iT-i2q" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="325" y="-263"/>
+        </scene>
     </scenes>
+    <resources>
+        <image name="jeewood_intro" width="1200" height="1200"/>
+        <image name="jw_icon" width="535" height="125"/>
+    </resources>
 </document>
