--- a/Jeewood/ItemTableViewCell.xib
+++ b/Jeewood/ItemTableViewCell.xib
@@ -3,18 +3,58 @@
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10085"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="144" id="KGk-i7-Jjw" customClass="ItemTableViewCell" customModule="Jeewood" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="320" height="144"/>
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="325" id="KGk-i7-Jjw" customClass="ItemTableViewCell" customModule="Jeewood" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="320" height="325"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="320" height="143.5"/>
+                <rect key="frame" x="0.0" y="0.0" width="320" height="325"/>
                 <autoresizingMask key="autoresizingMask"/>
+                <subviews>
+                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="wST-ve-bxm">
+                        <rect key="frame" x="-6" y="-10" width="334" height="265"/>
+                    </imageView>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="ItemName" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="cq0-c1-qss">
+                        <rect key="frame" x="8" y="263" width="79" height="21"/>
+                        <constraints>
+                            <constraint firstAttribute="width" constant="79" id="uIF-Qd-sc6"/>
+                        </constraints>
+                        <fontDescription key="fontDescription" type="system" pointSize="16"/>
+                        <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                        <nil key="highlightedColor"/>
+                    </label>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="itemTag" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Rts-2B-GqV">
+                        <rect key="frame" x="8" y="295" width="61" height="21"/>
+                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                        <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                        <nil key="highlightedColor"/>
+                    </label>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="itemCost" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="CXl-S5-Cr2">
+                        <rect key="frame" x="243" y="263" width="69" height="21"/>
+                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                        <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                        <nil key="highlightedColor"/>
+                    </label>
+                </subviews>
+                <constraints>
+                    <constraint firstAttribute="trailingMargin" secondItem="wST-ve-bxm" secondAttribute="trailing" constant="-16" id="092-EY-9Ug"/>
+                    <constraint firstItem="wST-ve-bxm" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="topMargin" constant="-18" id="7yG-Yf-Bho"/>
+                    <constraint firstAttribute="bottomMargin" secondItem="CXl-S5-Cr2" secondAttribute="bottom" constant="32.5" id="LMB-os-fiF"/>
+                    <constraint firstItem="cq0-c1-qss" firstAttribute="top" secondItem="wST-ve-bxm" secondAttribute="bottom" constant="8" symbolic="YES" id="Nzf-Im-daj"/>
+                    <constraint firstItem="Rts-2B-GqV" firstAttribute="top" secondItem="cq0-c1-qss" secondAttribute="bottom" constant="11" id="Ozy-oH-FBi"/>
+                    <constraint firstItem="CXl-S5-Cr2" firstAttribute="trailing" secondItem="H2p-sc-9uM" secondAttribute="trailingMargin" id="Sex-ag-U0k"/>
+                    <constraint firstItem="wST-ve-bxm" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leadingMargin" constant="-14" id="fRH-i8-C2R"/>
+                    <constraint firstItem="cq0-c1-qss" firstAttribute="baseline" secondItem="CXl-S5-Cr2" secondAttribute="baseline" id="gI6-1D-CV4"/>
+                    <constraint firstItem="cq0-c1-qss" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leadingMargin" id="nzF-Ib-DNT"/>
+                    <constraint firstItem="cq0-c1-qss" firstAttribute="leading" secondItem="Rts-2B-GqV" secondAttribute="leading" id="qxB-rE-OAy"/>
+                    <constraint firstItem="cq0-c1-qss" firstAttribute="top" secondItem="CXl-S5-Cr2" secondAttribute="top" id="r26-DT-hnw"/>
+                </constraints>
             </tableViewCellContentView>
-            <point key="canvasLocation" x="433" y="395"/>
+            <point key="canvasLocation" x="433" y="485.5"/>
         </tableViewCell>
     </objects>
 </document>
