- Creating cart in AppDelegate

--- a/Jeewood/Base.lproj/Main.storyboard
+++ b/Jeewood/Base.lproj/Main.storyboard
@@ -41,23 +41,6 @@
             <point key="canvasLocation" x="1081" y="-263"/>
         </scene>
         <!--View Controller-->
-        <scene sceneID="tne-QT-ifu">
-            <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="Jeewood" customModuleProvider="target" sceneMemberID="viewController">
-                    <layoutGuides>
-                        <viewControllerLayoutGuide type="top" id="y3c-jy-aDJ"/>
-                        <viewControllerLayoutGuide type="bottom" id="wfy-db-euE"/>
-                    </layoutGuides>
-                    <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
-                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
-                    </view>
-                </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
-            </objects>
-        </scene>
-        <!--View Controller-->
         <scene sceneID="3Be-Xn-uUz">
             <objects>
                 <viewController id="eqC-gP-21q" sceneMemberID="viewController">
@@ -224,6 +207,37 @@
             </objects>
             <point key="canvasLocation" x="3765" y="-210"/>
         </scene>
+        <!--Cart-->
+        <scene sceneID="o4c-xX-1FR">
+            <objects>
+                <viewController id="65a-Rt-Spo" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="Gk7-FV-dEW"/>
+                        <viewControllerLayoutGuide type="bottom" id="eH6-2D-JwF"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="Dah-A8-2Nv">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="5Pu-9E-I9J">
+                                <rect key="frame" x="0.0" y="64" width="600" height="536"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                            </tableView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="5Pu-9E-I9J" firstAttribute="top" secondItem="Gk7-FV-dEW" secondAttribute="bottom" id="NoT-MM-loR"/>
+                            <constraint firstAttribute="trailing" secondItem="5Pu-9E-I9J" secondAttribute="trailing" id="Vbn-bY-9n5"/>
+                            <constraint firstItem="5Pu-9E-I9J" firstAttribute="bottom" secondItem="eH6-2D-JwF" secondAttribute="top" id="rVv-03-qHJ"/>
+                            <constraint firstItem="5Pu-9E-I9J" firstAttribute="leading" secondItem="Dah-A8-2Nv" secondAttribute="leading" id="xof-r9-cdY"/>
+                        </constraints>
+                    </view>
+                    <navigationItem key="navigationItem" title="Cart" id="YeJ-CE-biq"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="qhv-D9-E9T" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="4196" y="-1142"/>
+        </scene>
         <!--Navigation Controller-->
         <scene sceneID="IVB-SA-I70">
             <objects>
@@ -259,6 +273,24 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="DxI-ma-kaK" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="3009" y="-210"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="5ET-54-0Py">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="fZG-ov-c0s" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="qB5-uO-aa6">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="65a-Rt-Spo" kind="relationship" relationship="rootViewController" id="hFC-Pt-K99"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="FeC-a4-gy1" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="3489" y="-1142"/>
         </scene>
     </scenes>
     <resources>
